# onboarding-ai

./: pyproject.toml
app/: main.py
